@@ -1,4 +1,4 @@
-& 1.8.4p5
+& 1.8.4p6
 & changes
 This is a list of changes in this patchlevel which are probably of
 interest to players. More information about new commands and functions
@@ -11,6 +11,17 @@ help topics named for each release (e.g. 'help 1.7.2p30').
 A list of the patchlevels associated with each release can
 be read in 'help patchlevels'.
 
+Version 1.8.4 patchlevel 6                                 ??? ??,  2011
+
+Functions:
+ * valid() can be used with the 'qreg' category to check if a string
+   is a valid q-register name.  [SW]
+   
+Fixes:
+ * Wildcard matches on ANSI'd strings sometimes failed. Reported by Duckwa
+   and Paige. [MG]
+
+& 1.8.4p5
 Version 1.8.4 patchlevel 5                                 Jun 19,  2011
 
 Major Changes:
