@@ -4417,7 +4417,7 @@ Miscellaneous changes:
 For information on a specific patchlevel of one of the versions listed,
 type 'help <version>p<patchlevel>'. For example, 'help 1.7.2p3'
 
-1.8.4: 0, 1, 2, 3, 4, 5
+1.8.4: 0, 1, 2, 3, 4, 5, 6
 1.8.3: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
 1.8.2: 0, 1, 2, 3, 4, 5, 6, 7, 8
 1.8.1: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10
